# AI_Architect_council

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  crew.py  pyproject.toml  requirements.txt  ui.py
config/: agents.yaml  tasks.yaml
